--- a/Tournament/Tournament.UI.csproj
+++ b/Tournament/Tournament.UI.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tournament.Database\Tournament.Database.Models.csproj" />
+    <ProjectReference Include="..\Tournament.Database\Tournament.DAO.csproj" />
   </ItemGroup>
 
 </Project>
